=head1 NAME

DBI::Changes - List of significant changes to the DBI

=encoding ISO8859-1

=cut

=head2 Changes in DBI 1.631

NOTE: This release changes the handle passed to Callbacks from being an 'inner'
handle to being an 'outer' handle. If you have code that makes use of Callbacks,
you should be sure you understand what this change means and review your
callback code.

    Changed the handle passed to Callbacks from being an 'inner'
        handle to being an 'outer' handle.

    Improved reliability of concurrent testing
        PR#8 [Peter Rabbitson]
    Changed optional dependencies to "suggest"
        PR#9 [Karen Etheridge]
    Changed to avoid mg_get in neatsvpv during global destruction
        PR#10 [Matt Phillips]

=head2 Changes in DBI 1.630 - 28th Oct 2013

NOTE: This release enables PrintWarn by default regardless of $^W.
Your applications may generate more log messages than before.

    Fixed err for new drh to be undef not to 0 [Martin J. Evans]
    Fixed RT#83132 - moved DBIstcf* constants to util
        export tag [Martin J. Evans]
    PrintWarn is now triggered by warnings recorded in methods like STORE
        that don't clear err RT#89015 [Tim Bunce]

    Changed tracing to no longer show quote and quote_identifier calls
        at trace level 1.
    Changed DBD::Gofer ping while disconnected set_err from warn to info.
    Clarified wording of log message when err is cleared.
    Changed bootstrap to use $XS_VERSION RT#89618 [Andreas Koenig]

    Added connect_cached.connected Callback PR#3 [David E. Wheeler]

    Clarified effect of refs in connect_cached attributes [David E. Wheeler]
    Extended ReadOnly attribute docs for when the driver cannot
      ensure read only [Martin J. Evans]
    Corrected SQL_BIGINT docs to say ODBC value is used PR#5 [ilmari]

There was no DBI 1.629 release.

=head2 Changes in DBI 1.628 - 22nd July 2013

    Fixed missing fields on partial insert via DBI::DBD::SqlEngine