@@ -16,7 +16,7 @@ conflicts:
   DBD::RAM: 0.072
   SQL::Statement: 1.33
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.132830'
+generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120630'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -29,10 +29,10 @@ no_index:
 requires:
   perl: 5.008
 resources:
-  MailingList: mailto:dbi-dev@perl.org
   homepage: http://dbi.perl.org/
   license: http://dev.perl.org/licenses/
   repository: https://github.com/perl5-dbi/dbi
+  x_MailingList: mailto:dbi-dev@perl.org
 version: 1.631
 x_suggests:
   Clone: 0.34
